# webtoon-downloader

./: .dockerignore  .gitignore  README.md  pyproject.toml  run-dev.sh
.devcontainer/: Dockerfile  devcontainer.example.json
develop/: flamecomics.ipynb  mangacom.ipynb  soup.txt  webtoons.ipynb
router/: root.py
webtoon-downloader/: main.py
