[tool.poetry]
name = "webtoon-downloader"
version = "1.0.0"
description = ""
authors = ["Maximilian Neudert <max@neuds.de>"]
readme = "README.md"
packages = [{include = "*", from="app"}]


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^2.2.4"
pandas = "^2.2.3"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


