[tool.poetry]
name = "webtoon-downloader"
version = "1.0.0"
description = ""
authors = ["Maximilian Neudert <max@neuds.de>"]
readme = "README.md"
packages = [{include = "*", from="app"}]


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^2.2.4"
pandas = "^2.2.3"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
requests = "^2.32.3"
bs4 = "^0.0.2"
pillow = "^11.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


